# CRPG-Combat-Demo

./: .gitignore  CMakeLists.txt  README.md  gen_ninja_clang.bat
.zed/: debug.json  tasks.json
assets/maps/: InfluenceMapTest.toml  MainLevel.toml  Outdated.toml
assets/models/: Barrel.fbx  Barrel.glb
assets/textures/: TileOutline.png~
src/engine/: CMakeLists.txt  pch.h
src/engine/engine/ai/: AStarPath.cc  AStarPath.h  GoapPlanner.cc  GoapPlanner.h  InfluenceMap.cc  InfluenceMap.h  SparseGraph.cc  SparseGraph.h
src/engine/engine/core/: Application.cc  Application.h  Error.cc  Resource.h  ResourceManager.cc  ResourceManager.h  Timer.cc  Timer.h  Window.cc  Window.h
src/engine/engine/graphics/: Model.cc  Model.h  RenderQueue.cc  RenderQueue.h  Texture.cc  Texture.h
src/engine/engine/utilities/: CMakeLists.txt  Color.cc  Color.h  DebugRayActor.cc  DebugRayActor.h  Format.h  TypeInfo.h
src/engine/engine/world/: CreateActorRegistry.h  LevelData.cc  LevelData.h  World.cc  World.h
src/engine/engine/world/actors/: Actor.h  NavigationActor.cc  NavigationActor.h  Tilemap.cc  Tilemap.h
src/game/: CMakeLists.txt
src/game/environment/: Barrel.cc  Barrel.h
src/game/gameplay/: Action.cc  Action.h  CameraController.cc  CameraController.h  Character.cc  Character.h  Inventory.cc  Inventory.h  TurnManager.cc  TurnManager.h
src/game/main/: CMakeLists.txt  Game.cc  Game.h  Main.cc  MoveWeightedTilemap.cc  MoveWeightedTilemap.h
