CMAKE_MINIMUM_REQUIRED(VERSION 3.30)

# Libraries linked via full path != linker search path error
CMAKE_POLICY(SET CMP0003 NEW)
# Syntax problems are errors
CMAKE_POLICY(SET CMP0010 NEW)

# Removes unnecessary cmake files when generating MSVC project files
SET(CMAKE_SUPPRESS_REGENERATION TRUE)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED 20)

SET(BINARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}/Archive")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BINARY_OUTPUT_DIRECTORY}")

PROJECT("crpg-combat"
    VERSION 0.0.1
    LANGUAGES CXX C
)

SET(ROOT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "Root Directory")

ADD_SUBDIRECTORY(src/engine)
ADD_SUBDIRECTORY(src/game)
