ADD_EXECUTABLE(${PROJECT_NAME})

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(gameplay)
ADD_SUBDIRECTORY(environment)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PRIVATE
        ${ROOT_DIRECTORY}/src/engine
        ${ROOT_DIRECTORY}/src/game
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    PRIVATE
        engine
)
